[package]
name = "time-locked-fund"
version = "0.1.0"
description = "Time locked funds account."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_locked_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
